# AI-GIT

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/commands/: add.cpp  add1.cpp  commands.hpp  hash_object.cpp  init.cpp  status.cpp
src/core/: compression.cpp  compression.hpp  config.cpp  config.hpp  filesystem.hpp  hashing.cpp  hashing.hpp  index.cpp  index.hpp  refs.cpp  refs.hpp  storage.cpp  storage.hpp
src/models/: blob.cpp  blob.hpp  commit.cpp  commit.hpp  object.hpp  tree.cpp  tree.hpp
